--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-sans: var(--font-manrope);
 }
 
 @theme inline {
@@ -22,5 +23,19 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans), sans-serif;
+}
+
+.bg-grid {
+  background-color: #262626;
+  background-image: 
+    linear-gradient(rgba(255, 255, 255, 0.1) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+  background-size: 40px 40px;
+}
+.bg-dark-smooth {
+  background-color: #1a1a1a; /* gris oscuro elegante */
+}
+.bg-darker-smooth {
+  background-color: #0e0e0e; /* gris oscuro elegante */
 }
